# cmake

./: README.md
Ep002/: info.txt
Ep002/source/: CMakeLists.txt  main.cpp
Ep005/: info.txt
Ep005/source/: CMakeLists.txt  main.cpp
Ep005/source/include/: dog.h
Ep007/source/: CMakeLists.txt  main.cpp
Ep007/source/logger/include/: log.h
Ep007/source/logger/src/: log.cpp
Ep007/source/src/: dog.cpp  operations.cpp
Ep008/: CMakeLists.txt
Ep008/src/stats/: stats.cpp
Ep009/: CMakeLists.txt
Ep009/src/: main.cpp
Ep009/src/math/: math.cmake  supermath.cpp
Ep009/src/stats/: stats.cmake
Ep010/: CMakeLists.txt
Ep010/src/math/: CMakeLists.txt
Ep010/src/stats/: CMakeLists.txt
Ep011/: 1-message.cmake  2-variables.cmake  5-loops.cmake
Ep018/: CMakeLists.txt
Ep018/src/: information.cpp  information.h  main.cpp
Ep018/src/math/: CMakeLists.txt
Ep018/src/stats/: CMakeLists.txt
Ep020/: CMakeLists.txt
Ep020/cmake/: ClangFormat.cmake
Ep021/: CMakeLists.txt
Ep021/cmake/: AddFmt.cmake  ClangFormat.cmake
Ep022/: CMakeLists.txt
Ep022/cmake/: AddGoogleTest.cmake
Ep022/src/: calculator.cpp
Ep022/test/: CMakeLists.txt  test_calc.cpp
Ep023/src/: CMakeLists.txt
Ep023/test/: CMakeLists.txt  test_calc.cpp
Ep024/cmake/: AddCatch2.cmake
Ep025/docs/: CMakeLists.txt  Doxyfile
Ep026/: CMakeLists.txt
Ep026/docs/: CMakeLists.txt
Ep027 CPM/: CMakeLists.txt
Ep028 VCPKG/: CMakeLists.txt
Ep028 VCPKG/test/: CMakeLists.txt
Ep029 Conan/: conanfile.py
Ep029 Conan/docs/: CMakeLists.txt
Ep030 VCPKG Presets/: CMakeLists.txt  vcpkg.json
Ep030 VCPKG Presets/docs/: CMakeLists.txt
Ep030 VCPKG Presets/test/: CMakeLists.txt
Ep032 Templates/vcpkg-template/: vcpkg.json
Ep032 Templates/vcpkg-template/docs/: CMakeLists.txt
